CRM-4789: fixed except baloon corner appearance for multiselects on mobile

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/less/mobile/filter.less
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/less/mobile/filter.less
@@ -24,7 +24,7 @@
     margin: 10px auto 0;
     max-width: 506px;
     width: 100%;
-    z-index: @zindexPopover; // to show over grid's loading mask
+    z-index: @oroZindexDropdown; // to show over grid's loading mask
     @media only screen and (min-width: 527px) {
       left: 50%;
       margin-left: -253px;
